# cybershadow

./: .gitignore  CMakeLists.txt  readme.md
LaTeX/: Makefile  cybershadow.bbl  cybershadow.tex  sn-bibliography.bib
chapter1/: CMakeLists.txt  readme.md  results.md
chapter1/include/: Args.hpp
chapter1/source/: FileTypeReader.cpp
chapter1/tests/: CMakeLists.txt
chapter2/greenwire/: analysis.md
chapter2/moonfall/: analysis.md
chapter3/: analysis.md  dexor.py  extracted_files.md
chapter3/data4/0/customXml/: item2.xml  item4.xml  itemProps1.xml  itemProps2.xml  itemProps3.xml  itemProps4.xml
chapter3/data4/0/docProps/: app.xml  core.xml  custom.xml
chapter3/data4/0/word/: document.xml  endnotes.xml  fontTable.xml  footer1.xml  footnotes.xml  header1.xml  numbering.xml  settings.xml  styles.xml  webSettings.xml
chapter3/data4/0/word/theme/: theme1.xml
chapter3/data4/9940/: [Content_Types].xml
chapter3/data4/9940/docProps/: app.xml  core.xml
chapter3/data4/9940/ppt/: presentation.xml  viewProps.xml
chapter3/data4/9940/ppt/_rels/: presentation.xml.rels
chapter3/data4/9940/ppt/slideLayouts/: slideLayout1.xml  slideLayout10.xml  slideLayout11.xml  slideLayout2.xml  slideLayout3.xml  slideLayout4.xml  slideLayout5.xml  slideLayout6.xml  slideLayout7.xml  slideLayout8.xml  slideLayout9.xml
chapter3/data4/9940/ppt/slideMasters/: slideMaster1.xml
chapter3/data4/9940/ppt/slides/: slide1.xml  slide2.xml
chapter3/data4/9940/ppt/tags/: tag1.xml
chapter3/data4/9940/ppt/theme/: theme1.xml
chapter4/: analysis.md
presentation/: .gitignore  cybershadow.aux  cybershadow.bbl  cybershadow.blg  cybershadow.fdb_latexmk  cybershadow.fls  cybershadow.out  cybershadow.tex  sn-bibliography.bib
script-file-type-detection/: CMakeLists.txt  readme.md
script-file-type-detection/include/: FileSystemUtils.hpp  FileTypeReader.hpp
script-file-type-detection/source/: Args.cpp  FileSystemUtils.cpp  stfd.cpp
script-file-type-detection/tests/: ArgsTests.cpp
stfd/: CMakeLists.txt
stfd/include/: Args.hpp
stfd/source/: Args.cpp  FileSystemUtils.cpp  FileTypeReader.cpp  stfd.cpp
